# solfege_c

./: CMakeLists.txt
include/: interval.h  notes.h  notes_helper.h
src/: chromatic.c  interval.c  main.c  notes.c  white_note.c
